Made base elements functional. Fixed a lot of bugs. Test app works!